--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -7,6 +7,34 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@phdthesis{martins2006integraccao,
+	title={Integra{\c{c}}{\~a}o de Sistemas de Informa{\c{c}}{\~a}o: Perspectivas, normas e abordagens},
+	author={Martins, Victor Manuel Moreira},
+	year={2006}
+}
+
+@techreport{fielding1999hypertext,
+	title={Hypertext transfer protocol--HTTP/1.1},
+	author={Fielding, Roy and Gettys, Jim and Mogul, Jeffrey and Frystyk, Henrik and Masinter, Larry and Leach, Paul and Berners-Lee, Tim},
+	year={1999}
+}
+
+
+@book{earl1989management,
+	title={Management strategies for information technology},
+	author={Earl, Michael J},
+	year={1989},
+	publisher={Prentice-Hall, Inc.}
+}
+
+@book{edwards2000application,
+	title={Application Integration for E-business: Strategies for Integrating Key Applications, Systems and Processes},
+	author={Edwards, Peter and Newing, Rod},
+	year={2000},
+	publisher={Business Intelligence}
+}
+
+
 @article{santos2005,
 	author = {Santos, Paulo Sergio and Menezes, Crediné Silva de and Cury, Davidson and Nevado, Rosane Aragon de},
 	keywords = {concept maps,learning assessment},
