--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -19,6 +19,13 @@
 	year={1999}
 }
 
+@article{fielding2000rest,
+	title={REST: architectural styles and the design of network-based software architectures},
+	author={Fielding, Roy Thomas},
+	journal={Doctoral dissertation, University of California},
+	year={2000}
+}
+
 
 @book{earl1989management,
 	title={Management strategies for information technology},
