--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -7,6 +7,29 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{ribeiro2012,
+	title={Um estudo sobre o incremento da Coes{\~a}o e Coer{\^e}ncia (Expressividade) em Mapas Conceituais},
+	author={Ribeiro, EF and Menezes, CS and Tavares, OL and Cury, D},
+	journal={Anais do XVI SBIE: Simp{\'o}sio Brasileiro de Inform{\'a}tica na Educa{\c{c}}{\~a}o},
+	pages={233--242},
+	year={2012}
+}
+
+@inproceedings{yoo2012mining,
+	title={Mining Concept Maps to Understand Students' Learning},
+	author={Yoo, Jin Soung and Cho, Moon-Heum},
+	booktitle={Educational Data Mining 2012},
+	year={2012}
+}
+
+@article{de2013construindo,
+	title={Construindo mapas conceituais utilizando a abordagem imap},
+	author={de Andrade Perin, Wagner and Junior, Roberto Guimar{\~a}es Morati and Cury, Davidson and de Menezes, Credin{\'e} Silva},
+	journal={Anais do Computer on the Beach},
+	pages={208--217},
+	year={2013}
+}
+
 @phdthesis{martins2006integraccao,
 	title={Integra{\c{c}}{\~a}o de Sistemas de Informa{\c{c}}{\~a}o: Perspectivas, normas e abordagens},
 	author={Martins, Victor Manuel Moreira},
