--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -95,7 +95,7 @@
 % ---
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
-\titulo{Um plugin de edição de Mapas Conceituais para Ambientes Moodle integrado ao CMPaaS}
+\titulo{CMPaaS: Edição  de Mapas  Conceituais em Ambientes Virtuais Moodle}
 \autor{Israel Henrique Silva de Lima}
 \local{Vitória}
 \data{2016}
@@ -335,7 +335,7 @@ minha formação acadêmica e pessoal.
 % resumo em português
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
-Este trabalho apresenta a concepção e o desenvolvimento de um \textit{plugin} de edição de mapas conceituais para o Moodle de modo a favorecer a integração entre este e a plataforma de serviços CMPaaS, que oferece uma diversidade de serviços para processamento de mapas conceituais. O objetivo é oferecer ao CMPaaS uma base de usuários de ferramentas digitais que podem ser potenciais fontes de dados para a as ferramentas e pesquisas desenvolvidas no contexto do CMPaaS. São detalhados os processos e tecnologias utilizadas na construção do \textit{plugin}, bem como é apresentada uma prova de conceitos.
+Este trabalho  apresenta a concepção e o desenvolvimento de um \textit{plugin} de edição de mapas conceituais para a plataforma Moodle de modo a favorecer a integração  entre este e a plataforma  de serviços do projeto CMPaaS,  que oferece uma diversidade de serviços para processamento  de mapas conceituais. O objetivo é favorecer ao CMPaaS a integração à uma base de usuários consistente que podem ser potenciais fontes de dados para as ferramentas  e pesquisas desenvolvidas no contexto do projeto CMPaaS. São detalhados a arquitetura, os processos e as tecnologias utilizadas na construção do \textit{plugin}. Uma prova de conceitos é apresentada.
 	
  \textbf{Palavras-chave}: Mapas Conceituais. Moodle. CMPaaS.
 \end{resumo}
@@ -347,7 +347,7 @@ Este trabalho apresenta a concepção e o desenvolvimento de um \textit{plugin} 
     \vspace{\onelineskip}
  
     \noindent 
-    \textbf{Keywords}: conceptual maps. Moodle. CMPaaS.
+    \textbf{Keywords}: Concept Maps. Moodle. CMPaaS.
   \end{otherlanguage*}
 \end{resumo}
 
@@ -412,36 +412,43 @@ Este trabalho apresenta a concepção e o desenvolvimento de um \textit{plugin} 
 
 Mapas conceituais são uma ferramenta gráfica muito utilizada na representação de conhecimento acerca de um dado domínio de problema. São fáceis de utilizar e possuem ampla aplicação na educação, podendo ser usados para apresentar o conteúdo de uma aula, de um livro, capítulo ou utilizado como método de avaliação.
 
-\begin{citacao}
-	Por ser considerada uma ferramenta “aberta”, já que não traz informações prévias em excesso aos estudantes além de apenas um pequeno conjunto de regras para sua utilização, os mapas conceituais deixam os professores e estudantes livres para explorar o conhecimento dentro do campo de estudo de seus interesses \cite{santos2005}.
-\end{citacao}
-
-Por sua simplicidade no processo de elaboração, mapas podem ser elaborados com lápis e papel, porém é possível alcançar novas aplicações quando da utilização de recursos computacionais, tais como a utilização de recursos dotados de inteligência artificial para análise de mapas (Perin e Cury, 2012) e mineração de dados (Yoo e Cho, 2012).
+Por sua simplicidade no processo de elaboração, mapas podem ser elaborados com lápis e papel, porém é possível alcançar novas aplicações quando da utilização de recursos computacionais, tais como a utilização de recursos dotados de inteligência artificial para análise de mapas \cite{de2013construindo} e mineração de dados \cite{yoo2012mining}.
 
 Pensando nisso, pesquisadores da Universidade Federal do Espírito Santo especificaram e desenvolveram uma plataforma denominada CMPaaS. Esta plataforma possui a finalidade de fornecer um ambiente favorável à disposição e integração de coleções de ferramentas voltadas para a gestão e uso inteligente de mapas conceituais que são frutos de pesquisas desenvolvidas por diversos estudantes deste grupo, além de pessoas externas ao projeto.
 
-Nesta linha, este trabalho acredita que uma forma efetiva de ampliar as fontes de dados para a plataforma do CMPaaS é favorecer a integração com sistemas que já possuam base de usuários consolidadas. Assim, propõe-se a criação de uma ferramenta que permita o uso dos mapas nas plataformas utilizadas no ensino a distância, já que estes são nichos grandes e, a julgar pelos avanços na utilização de recursos computacionais na educação, tendem a se ampliar nos próximos anos (Ribeiro et al., 2007).
+O CMPaaS concentra diversas ferramentas de mapas conceituais desenvolvidas em projetos do laboratório de educação da UFES, e muitas delas necessitam levantar dados para comprovação de hipóteses. Um exemplo de ferramenta é o iMap, que foi desenvolvido por \citeonline{Perin2014} em sua dissertação de mestrado.  
+
+O iMap é uma ferramenta utiliza inteligência computacional para fornecer uma camada de abstração entre um mapa conceitual e um avaliador. Assim é possível a um avaliador examinar um mapa conceitual através de perguntas e respostas em linguagem natural, sem haver a necessidade de um exame visual dos conceitos e relacionamentos presentes no mapa. No entanto a real capacidade desta ferramenta não pode ser efetivamente comprovada devido a escassez de utilizadores e de dados de entrada.
+
+Nesta linha, este trabalho acredita que uma forma efetiva de ampliar as fontes de dados para a plataforma do CMPaaS é favorecer a integração com sistemas que já possuam base de usuários consolidadas. Assim, propõe-se a criação de uma ferramenta que permita o uso dos mapas nas plataformas utilizadas no ensino a distância, já que estes são nichos grandes e, a julgar pelos avanços na utilização de recursos computacionais na educação, tendem a se ampliar nos próximos anos \cite{ribeiro2012}.
 
 Assim, este projeto visa o desenvolvimento de um plugin para construção de mapas conceituais dentro do gerenciador de cursos Modular Objected-Oriented Dynamic Learning Environment (Moodle) que permita o compartilhamento dos mapas produzidos com a plataforma CMPaaS.
+
+Para alcançar esses objetivos, foi realizada uma revisão bibliográfica aprofundada sobre mapas conceituais e a sua importância para a educação; também um  estudo do funcionamento e arquitetura do Moodle para entender como podem ser desenvolvidos plugins para adicionar novos recursos à plataforma;  foi feito um estudo sobre soluções de integração de sistemas para entender como seria possível a realização da interoperabilidade entre o Moodle e o CMPaaS. Por fim, o trabalho apresenta uma arquitetura conceitual e uma prova de conceitos para explorar as funcionalidades do plugin após a sua implementação.
+
+\section{Objetivo} 
  
-Para alcançar esses objetivos, foi realizada uma revisão bibliográfica aprofundada sobre mapas conceituais e a sua importância para a educação; também um  estudo do funcionamento e arquitetura do Moodle para entender como podem ser desenvolvidos plugins para adicionar novos recursos à plataforma; foi preciso também uma pesquisa sobre integração de sistemas heterogêneos para entender como seria possível a realização da interoperabilidade desses dois sistemas. Para finalizar, o plugin foi implementado no Moodle e foram realizados testes de suas funcionalidades.
- 
+O CMPaaS é uma plataforma baseada em serviços web que agrega diversas ferramentas de manipulação de mapas conceituais. Ferramentas estas que carecem de uma base de usuários consolidada para geração de conteúdo.
 
-\section{Objetivo}
+A motivação para esse projeto de graduação é portanto, buscar uma forma de trazer para o CMPaaS uma base de usuários que possa alimenta-lo com conteúdo a ser consumido pelas ferramentas que integram a plataforma.
 
-O objetivo deste trabalho é a criação de um \textit{plugin} que disponibiliza um editor de criação de mapas conceituais em cursos da plataforma Moodle. O \textit{plugin} utilizará a plataforma CMPaaS como solução de armazenamento dos mapas conceituais na nuvem.
+Sendo assim este trabalho propõe a adoção de uma solução de integração de sistemas que leve a interoperabilidade entre o CMPaaS e uma plataforma que possua uma grande base de usuários.
 
-Para alcançar o objetivo principal foram definidos os seguintes objetivos específicos:
+\section{Objetivo Específico}
+
+Com o objetivo geral deste trabalho definido, para alcança-lo foram estipulados os seguintes objetivos específicos:
 
 \begin{itemize}
 	\item Estudar o que são mapas conceituais e suas aplicações na educação.
 	\item Estudar a arquitetura do Moodle e seus \textit{plugins}.
 	\item Estudar técnicas e arquiteturas de integração de sistemas.
-	\item Entender a plataforma CMPaaS.
+	\item Analisar a arquitetura da plataforma CMPaaS a fim de entender como realizar a integração dela com outras plataformas.
 	\item Desenvolver um novo \textit{plugin} para o Moodle segundo a arquitetura da plataforma.   
 \end{itemize} 
  
+\section{Resultados Esperados}
 
+O resultado esperado deste trabalho é demonstrar a possibilidade de integração dos serviços providos pelo CMPaaS com outras plataformas. E com isto aumentar o uso das ferramentas presentes na plataforma e o conteúdo existente na mesma. 
 
 % ----------------------------------------------------------
 % PARTE
